# nexum-core

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile.node  Dockerfile.secure-ping  README.md  docker-compose.mesh.yml  run-secure-ping.sh
.githooks/: post-commit
.github/workflows/: ci.yml
crates/nxms-escrow-orchestrator/: Cargo.toml
crates/nxms-escrow-orchestrator/src/: action_token.rs  bootstrap.rs  config.rs  db.rs  flow.rs  lib.rs  main.rs  operator_escrow.rs  tx_profile.rs  wallet.rs  worker.rs
crates/nxms-host-bootstrap/: Cargo.toml
crates/nxms-host-bootstrap/src/: main.rs
crates/nxms-mailbox/: Cargo.toml  README.md
crates/nxms-mailbox-client/: Cargo.toml  README.md
crates/nxms-mailbox-client/src/: lib.rs
crates/nxms-mailbox/src/: api.rs  config.rs  db.rs  lib.rs  main.rs
crates/nxms-monero-core/: Cargo.toml
crates/nxms-monero-core/src/: bridge.rs  config.rs  fee_policy.rs  lib.rs  limits.rs  policy.rs  types.rs  xmr_address.rs
crates/nxms-monero-core/src/chain/: mod.rs
crates/nxms-monero-core/src/crypto/: multisig.rs
crates/nxms-monero-core/src/multisig/: mod.rs  state.rs  wallet.rs
crates/nxms-monero-core/src/rpc/: mod.rs  server.rs  wallet_rpc.rs  wallet_runtime.rs
crates/nxms-monero-core/src/storage/: mod.rs
crates/nxms-signer/: Cargo.toml
crates/nxms-signer/src/: action_token.rs  agent.rs  agent_support.rs  audit_event.rs  config.rs  db.rs  lib.rs  main.rs  orchestrator_bridge.rs  snapshot.rs  trust.rs  wallet_rpc.rs  worker_http.rs
crates/nxms-signer/src/agent/: flow_ops.rs  pending.rs  tests.rs  transport.rs
crates/nxms-transport/: Cargo.toml  README.md  build.rs
crates/nxms-transport/native/: nxms_ms_transport.c  nxms_ms_transport.h
crates/nxms-transport/native/nexum_cli_src/: pqc_falcon.c  pqc_kem.h  util.c  util.h
crates/nxms-transport/src/: action_token_issuer.rs  action_token_issuer_vault.rs  admission.rs  bootstrap.rs  crypto.rs  host_identity.rs  host_vault.rs  lib.rs  p2p.rs  peers.rs  security.rs  tor_net.rs  trust.rs  wire.rs
crates/nxms-transport/tests/: crypto_negative.rs  crypto_roundtrip.rs  fuzz_targets_protocol_decode.rs
deploy/: README_wallet_rpc_ultra_paranoid.md
deploy/audit/: README.md  alpine-vm.rules  wsl-repo.rules
deploy/monero/: monerod-stagenet.conf.example  wallet-rpc-split-role.conf.example  wallet-rpc-stagenet.conf.example
deploy/openrc/: README.md  monero-wallet-rpc-stagenet  monero-wallet-rpc-stagenet.confd  monerod-stagenet  monerod-stagenet.confd  nxms-escrow-orchestrator  nxms-escrow-orchestrator.confd  nxms-mailbox  nxms-mailbox.confd  nxms-signer  nxms-signer.confd
deploy/systemd/: nxms-mailbox.service  nxms-signer.service
deploy/tor/: monerod-stagenet-hidden-service.conf.example  nxms-mailbox-hidden-service.conf.example
docs/: AGENTS.md  CODEX_SESSION_CONTEXT.md  DECISIONS.md  ESCROW_PROTOCOL_V1.md  NXMS_ACTION_TOKEN_CONTRACT_V1.md  NXMS_ALPINE_VM_V3_23_BOOTSTRAP.md  NXMS_AUDIT_BASELINE.md  NXMS_AUTH_GUARD_QUORUM_MODEL.md  NXMS_AUTH_GUARD_SECURITY_MODEL.md  NXMS_AUTH_GUARD_WORKING_NOTES.md  NXMS_GUARD_TAMPER_TRIGGERS.md  NXMS_HOST_ROLE_MATRIX.md  NXMS_INTEGRITY_MODEL.md  NXMS_MAILBOX_CONFIG.example.toml  NXMS_MAILBOX_P0_TEST_MATRIX.md  NXMS_MAILBOX_RUNBOOK.md  NXMS_MAINTENANCE_ARTIFACT_MODEL.md  NXMS_MONERO_STAGENET_TOR_BASELINE.md  NXMS_OFFLINE_RECOVERY_QUORUM_MODEL.md  NXMS_OPENRC_TOR_RUNTIME_BASELINE.md  NXMS_ORCHESTRATOR_INTEGRITY_RUNBOOK.md  NXMS_ORCHESTRATOR_P0_TEST_MATRIX.md  NXMS_ROADMAP.md  NXMS_RUNTIME_HARDENING_RUNBOOK.md  NXMS_SANDBOX_NETWORK_POLICY.md  NXMS_SIGNER_CONFIG.example.toml  NXMS_SIGNER_P0_TEST_MATRIX.md  NXMS_STACK_SOURCE_OF_TRUTH.md  NXMS_TOR_FALCON_SERVICE_MAP.md  NXMS_TOR_RUNTIME_P0_TEST_MATRIX.md  NXMS_TRUST_TRIAD.md  PROJECT_STATUS.md  REPO_LAYOUT.md  SECURITY_PROOF.md  THREAT_MODEL_NXMS_MAILBOX.md  nexum-mobile-qr-protocol.md
docs/reference/: ARCHITECTURE.md  DECISIONS.md  NXMS_ALL_IN_ONE_LOGICAL_LAYOUT.md  NXMS_ALPINE_VM_V3_23_BOOTSTRAP.md  NXMS_AUTH_GUARD_BRAINSTORM_QUESTIONS.md  NXMS_GUARD_DECISION_ARTIFACT_MODEL.md  NXMS_MAILBOX_P0_TEST_MATRIX.md  NXMS_MAILBOX_RUNBOOK.md  NXMS_MONERO_STAGENET_TOR_BASELINE.md  NXMS_MULTISIG_FLOW_STATE_MACHINE.md  NXMS_OPENRC_TOR_RUNTIME_BASELINE.md  NXMS_ORCHESTRATOR_CONFIG.example.toml  NXMS_SIGNER_CONFIG.example.toml  NXMS_SIGNER_P0_TEST_MATRIX.md  NXMS_SYSTEM_P0_PAIN_POINTS.md  NXMS_TOR_RUNTIME_P0_TEST_MATRIX.md  README.md
ios/NexumVault/: .gitignore  AGENT_RUNBOOK.md  Package.swift  README.md  setup-falcon.sh  verify-build-ready.sh
ios/NexumVault/NexumVault/: NexumVault.entitlements
ios/NexumVault/NexumVault.xcodeproj/: project.pbxproj
ios/NexumVault/NexumVault/App/: NexumVaultApp.swift
ios/NexumVault/NexumVaultTests/: CanonicalJSONTests.swift  ChallengeParserTests.swift  SignatureTests.swift
legacy-archive/: README.md
scripts/: build-and-test.sh  gen-mesh-identities.sh  run-mesh-test.sh  start-docker.sh
skills/alpine-openrc-smoke/: SKILL.md
skills/repo-triage/: SKILL.md
skills/security-review/: SKILL.md
src/: lib.rs  main.rs
tests/: e2e_escrow_admission.rs  e2e_operator_escrow.rs  e2e_orchestrated_flow.rs  e2e_runtime_trust_bundle.rs  e2e_sign_submit.rs  e2e_transport_mailbox.rs  secure_ping.rs  workspace_smoke.rs
tests/support/: mod.rs
tools/: git-pack-repo.sh  nxms-alpine-migrate-signer-config.sh  nxms-alpine-openrc-install.sh  nxms-alpine-reset-runtime.sh  nxms-archive-guard.sh  nxms-audit-install.sh  nxms-audit-report.sh  sync-vm.sh  tar-sync-vm.sh
tools/git-hooks/: nxms-archive-pre-receive.sh
tools/nexum-cli/: Makefile  README.md  ch.json
tools/nexum-cli/src/: auth.c  auth.h  cli_app.c  cli_app.h  cli_auth_core_cmds.c  cli_auth_core_cmds.h  cli_common.c  cli_common.h  cli_config.c  cli_config.h  cli_ext_cmds.c  cli_ext_cmds.h  dm.c  dm.h  http.c  http.h  json_min.c  json_min.h  main.c  pow.c  pow.h  pqc_falcon.c  pqc_falcon.h  pqc_kem.c  prekeys.c  prekeys.h  util.c  vault.c  vault.h
tools/nexum-cli/tests/: Makefile  cross_kat_vectors.h  falcon_frodo_kat_vectors.h  gen_cross_kat.py  gen_falcon_frodo_kat.py
(+35 files in other folders)
