[package]
name = "nxms-meta"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = [
  "crates/nxms-transport",
  "crates/nxms-mailbox",
  "crates/nxms-mailbox-client",
  "crates/nxms-monero-core",
  "crates/nxms-escrow-orchestrator",
  "crates/nxms-signer",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
http = "1"
jsonwebtoken = "9"
libc = "0.2"
md5 = "0.7"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
zeroize = "1"

[dependencies]

[dev-dependencies]
anyhow.workspace = true
axum = { version = "0.7", features = ["json"] }
hex.workspace = true
jsonwebtoken.workspace = true
nxms-mailbox = { path = "crates/nxms-mailbox" }
nxms-mailbox-client = { path = "crates/nxms-mailbox-client" }
nxms-escrow-orchestrator = { path = "crates/nxms-escrow-orchestrator" }
nxms-signer = { path = "crates/nxms-signer" }
nxms-transport = { path = "crates/nxms-transport" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true

[profile.dev]
debug = true
opt-level = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = false
