[package]
name = "nxms-meta"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "nexum-node"
path = "src/main.rs"

[workspace]
resolver = "2"
members = [
  "crates/nxms-transport",
  "crates/nxms-signer",
  "crates/nxms-mailbox",
  "crates/nxms-mailbox-client",
  "crates/nxms-escrow-orchestrator",
  "crates/nxms-monero-core",
  "crates/nxms-host-bootstrap",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
http = "1"
jsonwebtoken = "9"
libc = "0.2"
md5 = "0.7"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
zeroize = "1"

[dependencies]
anyhow.workspace = true
base64.workspace = true
nxms-transport = { path = "crates/nxms-transport" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
nxms-transport = { path = "crates/nxms-transport" }
nxms-signer = { path = "crates/nxms-signer" }
nxms-mailbox = { path = "crates/nxms-mailbox" }
nxms-mailbox-client = { path = "crates/nxms-mailbox-client" }
nxms-escrow-orchestrator = { path = "crates/nxms-escrow-orchestrator" }
privai-chain = { path = "../privAI/privai-chain" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum = "0.7"
hex.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
tempfile.workspace = true

[profile.dev]
debug = true
opt-level = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = false
