[package]
name = "nxms-escrow-orchestrator"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "NXMS escrow workflow orchestrator (production flow state + outbox/inbox/dead-letter)"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
http = "1"
jsonwebtoken = "9"
libc = "0.2"
md5 = "0.7"
nxms-transport = { path = "../nxms-transport" }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
