[package]
name = "nxms-host-bootstrap"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "NXMS neutral host bootstrap tool for AG, orchestrator, signer, and other core roles"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
nxms-transport = { path = "../nxms-transport" }
serde_json = "1.0"
