[package]
name = "nxms-mailbox-client"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "HTTP client for nxms-mailbox (optionally over Tor SOCKS5h)"

[dependencies]
anyhow = "1"
nxms-transport = { path = "../nxms-transport", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
