[package]
name = "nxms-mailbox"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "NXMS mailbox (Tor onion service) store-and-forward relay for encrypted envelopes"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
nxms-transport = { path = "../nxms-transport", default-features = false, features = ["security"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
nxms-mailbox-client = { path = "../nxms-mailbox-client" }
