[package]
name = "nxms-monero-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "nxms_monero_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hex.workspace = true
md5.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
zeroize.workspace = true