[package]
name = "nxms-signer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "NXMS manual signer agent (mailbox + snapshot policy + wallet-rpc validation)"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
jsonwebtoken = "9"
libc = "0.2"
md5 = "0.7"
nxms-mailbox-client = { path = "../nxms-mailbox-client" }
nxms-transport = { path = "../nxms-transport" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time", "process", "io-util"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
nxms-mailbox = { path = "../nxms-mailbox" }
