[package]
name = "nxms-transport"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "NXMS transport primitives (wire format + PQ crypto helpers) for Tor mailbox / P2P"
build = "build.rs"

[dependencies]
anyhow = "1"
base64 = { version = "0.22", optional = true }
hex = "0.4"
libc = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socks = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
zeroize = { version = "1", optional = true }

[features]
default = ["crypto"]
crypto = ["dep:base64", "dep:libc", "dep:zeroize"]
security = ["dep:zeroize"]

[build-dependencies]
cc = "1"
